--- a/unit_5/style.css
+++ b/unit_5/style.css
@@ -10,7 +10,7 @@ h1 {color: #B88A00;
 
 body {background-image: url(img.jpg);
 	  background-repeat: no-repeat;
-	  background-size: 100% 700px;
+	  background-size: 100% 1000px;
 	  font-size: 28px;
 	  color: white;
 	  line-height: 42px;
@@ -20,6 +20,12 @@ body {background-image: url(img.jpg);
 
 ul { 
    list-style-type: none; 
+
+}
+
+nav ul li {
+	display: inline;
+	margin-right: 4em;
 }
 
 #slogan {
@@ -39,9 +45,11 @@ header {
 }
 
 nav {
-	background-color: E8C66A;
+	background-color: #E8C66A;
 	border: 1px black solid;
 	padding: 20px;
+	letter-spacing: .15em;
+
 }
 
 footer {
